@@ -1,5 +1,10 @@
 # -*- coding: utf-8 -*-
 
+2009-04-08  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems/specification.rb:  Strip directories, complain for
+	  non-files in #validate.
+
 2009-04-07  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/specification.rb:  Implement #initialize_copy.
